[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/tilesets/city_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://content/trigger/TriggerArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/trigger/AreaChangeTrigger.gd" type="Script" id=3]
[ext_resource path="res://content/areas/Living/LivingFriendstreetArea/LivingFriendstreetArea.gd" type="Script" id=4]
[ext_resource path="res://assets/tilesets/collision_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://content/areas/CrossingArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/animated_sprites/tres/animated_car.tres" type="SpriteFrames" id=9]
[ext_resource path="res://content/movables/NPC.tscn" type="PackedScene" id=10]
[ext_resource path="res://content/trigger/StartCarTrigger.gd" type="Script" id=11]

[node name="LivingFriendstreetArea" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65535, 1, 0, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 2, 131071, 1, 65536, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65537, 65543, 1, 65537, 65544, 1, 65537, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65538, 196607, 1, 65536, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65538, 262143, 1, 65536, 196608, 1, 65537, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65537, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65538, 327679, 1, 65536, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65538, 393215, 1, 65536, 327680, 1, 65537, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65538, 458751, 1, 131072, 393216, 1, 131073, 393217, 1, 131073, 393218, 1, 131073, 393219, 1, 131073, 393220, 1, 131073, 393221, 1, 131073, 393222, 1, 131073, 393223, 1, 131073, 393224, 1, 131073, 393225, 1, 131073, 393226, 1, 131073, 393227, 1, 131074, 458752, 25, 1, 458753, 25, 1, 458754, 25, 1, 458755, 25, 1, 458756, 25, 1, 458757, 25, 1, 458758, 25, 0, 458759, 25, 1, 458760, 25, 1, 458761, 25, 1, 458762, 25, 1, 458763, 25, 1, 524288, 25, 131073, 524289, 25, 131073, 524290, 25, 131073, 524291, 25, 131073, 524292, 25, 131073, 524293, 25, 131073, 524294, 25, 131072, 524295, 25, 131073, 524296, 25, 131073, 524297, 25, 131073, 524298, 25, 131073, 524299, 25, 131073, 655359, 1, 0, 589824, 1, 1, 589825, 1, 1, 589826, 1, 1, 589827, 1, 1, 589828, 1, 1, 589829, 1, 1, 589830, 1, 1, 589831, 1, 1, 589832, 1, 1, 589833, 1, 1, 589834, 1, 1, 589835, 1, 2, 720895, 1, 65536, 655360, 1, 65537, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65538, 786431, 1, 65536, 720896, 1, 65537, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65537, 720902, 1, 65537, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65538, 851967, 1, 65536, 786432, 1, 65537, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 65537, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65538, 917503, 1, 65536, 851968, 1, 65537, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65538, 983039, 1, 65536, 917504, 1, 65537, 917505, 1, 65537, 917506, 1, 65537, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65538, 1048575, 1, 131072, 983040, 1, 131073, 983041, 1, 131073, 983042, 1, 131073, 983043, 1, 131073, 983044, 1, 131073, 983045, 1, 131073, 983046, 1, 131073, 983047, 1, 131073, 983048, 1, 131073, 983049, 1, 131073, 983050, 1, 131073, 983051, 1, 131074 )

[node name="Houses" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65537, 24, 0, 65538, 24, 1, 65539, 24, 2, 131073, 24, 65536, 131074, 24, 65537, 131075, 24, 65538, 196609, 21, 0, 196610, 21, 1, 196611, 21, 2, 196612, 8, 65536, 262145, 21, 65536, 262146, 21, 327681, 262147, 21, 131074, 262148, 8, 131072, 262149, 28, 0, 262151, 28, 0, 262153, 28, 0, 262155, 28, 0, 327681, 21, 262144, 327682, 21, 262145, 327683, 21, 262146, 327684, 8, 131072, 327685, 28, 131072, 327687, 28, 131072, 327689, 28, 131072, 327691, 28, 131072, 589825, 28, 0, 589827, 28, 0, 589829, 28, 0, 589832, 24, 0, 589833, 24, 1, 589834, 24, 2, 655361, 28, 131072, 655363, 28, 131072, 655365, 28, 131072, 655368, 24, 65536, 655369, 24, 65537, 655370, 24, 65538, 720904, 21, 6, 720905, 21, 7, 720906, 21, 8, 720907, 8, 65536, 786440, 21, 131078, 786441, 21, 327687, 786442, 21, 65544, 786443, 8, 131072, 851976, 21, 262150, 851977, 21, 262151, 851978, 21, 262152, 851979, 8, 131072 )

[node name="Details" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1, 29, 0, -65536, 29, 0, -65535, 29, 0, -65534, 29, 0, -65533, 29, 0, -65532, 29, 0, -65531, 29, 0, -65530, 29, 0, -65529, 29, 0, -65528, 29, 0, -65527, 29, 0, -65526, 29, 0, -65525, 29, 0, -65524, 29, 0, 12, 29, 0, 65548, 29, 0, 131084, 29, 0, 196620, 29, 0, 262156, 29, 0, 327692, 29, 0, 393228, 29, 0, 458763, 27, 0, 458764, 29, 0, 524299, 27, 0, 524300, 29, 0, 589836, 29, 0, 655372, 29, 0, 720908, 29, 0, 786433, 28, 0, 786435, 28, 0, 786437, 28, 0, 786444, 29, 0, 851969, 28, 131072, 851971, 28, 131072, 851973, 28, 131072, 851980, 29, 0, 917516, 29, 0, 983052, 29, 0, 1114111, 29, 0, 1048576, 29, 0, 1048577, 29, 0, 1048578, 29, 0, 1048579, 29, 0, 1048580, 29, 0, 1048581, 29, 0, 1048582, 29, 0, 1048583, 29, 0, 1048584, 29, 0, 1048585, 29, 0, 1048586, 29, 0, 1048587, 29, 0, 1048588, 29, 0 )

[node name="Collision" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
show_collision = true
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, 12, 0, 0, 65548, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131084, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196620, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262156, 0, 0, 327681, 0, 0, 327683, 0, 0, 327685, 0, 0, 327687, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 393228, 0, 0, 458763, 0, 0, 458764, 0, 0, 524299, 0, 0, 524300, 0, 0, 589836, 0, 0, 655361, 0, 0, 655363, 0, 0, 655365, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655372, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720908, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786444, 0, 0, 851969, 0, 0, 851971, 0, 0, 851973, 0, 0, 851976, 0, 0, 851978, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0 )

[node name="LeaveLeftTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( -31.8053, 509.688 )
scale = Vector2( 1, 16 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_living_friendstreet_leave_left"

[node name="LeaveLeftTrigger" type="Node" parent="LeaveLeftTriggerArea"]
script = ExtResource( 3 )
id = "tid_living_friendstreet_leave_left"

[node name="LeaveFriendTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 608.114, 863.028 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_living_friendstreet_leave_friend"

[node name="LeaveFriendTrigger" type="Node" parent="LeaveFriendTriggerArea"]
script = ExtResource( 3 )
id = "tid_living_friendstreet_leave_friend"

[node name="LeavePartnerTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 158.21, 352.543 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_living_friendstreet_leave_partner"

[node name="LeavePartnerTrigger" type="Node" parent="LeavePartnerTriggerArea"]
script = ExtResource( 3 )
id = "tid_living_friendstreet_leave_partner"

[node name="CrossingArea" parent="." instance=ExtResource( 7 )]
position = Vector2( 414.676, 510.675 )
scale = Vector2( 1, 2 )
slow_down = 1.0
crosswalk = true

[node name="NPC_car" parent="." instance=ExtResource( 10 )]
position = Vector2( -32, 544 )
movement_filename = "res://doc/living_friendstreet/car_1_2_movement.json"
speed = 2.0
active_on_start = true
animation = ExtResource( 9 )
current_position = Vector2( -1, 8 )

[node name="CarStartTrigger" type="Node" parent="NPC_car"]
script = ExtResource( 11 )
id = "tid_living_friendstreet_car_1_2_start"
